# magi

./: .dockerignore  .flake8  .gitignore  .gitmessage  .pre-commit-config.yaml  .pylintrc  .style.yapf  .yapfignore  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  noxfile.py  pyproject.toml  pytype.cfg  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml
benchmarks/: bsuite.py  catch.py  run_bsuite.py
docker/: dev.gpu
docs/: README.md  conf.py  faq.md  index.rst
docs/usage/: develop.md
examples/: README.md
examples/baselines/: run_drq.py  run_mpo_control.py
examples/drq_v2/: README.md  agents.py  app.py  main.py  utils.py
examples/offline/: README.md  base_config.py  d4rl_dataset.py  dataset_utils.py  experiment.py  launch_local_cql.sh  logger_utils.py  offline_cql.py  offline_iql.py  offline_td3_bc.py  requirements.txt
examples/pets/: base_config.py  run_cartpole.py  run_mujoco.py
magi/: __init__.py  _metadata.py  core.py  magi_test.py  types.py
magi/agents/: README.md  actors.py  bc.py  builders.py  jax_minimize_wrapper.py  utils.py
magi/environments/: __init__.py  cartpole.py  cartpole_continuous.py  pets_cartpole.py  pets_cheetah.py  pets_halfcheetah.py  pusher.py  reacher.py  reward_fns.py  termination_fns.py
magi/examples/: README.md  run_drq.py  run_drq_v2.py  run_mpo_control.py  run_rhpo_control.py  run_sac.py  run_sac_ae.py  run_sac_control.py  (+2 more)
projects/: README.md
requirements/: base.in  base.txt  dev.in  dev.txt  envs.txt  main.txt  tests-acme-dev.in  tests-acme-dev.txt  tests.in  tests.txt
(+318 files in other folders)
