[tool.poetry]
name = "magi"
version = "0.1.0"
description = ""
authors = ["Yicheng Luo <ethanluoyc@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
dm-acme = "^0.2.1"
jaxlib = "^0.1.67"
dm-haiku = "^0.0.4"
optax = "^0.0.8"
rlax = {git = "https://github.com/deepmind/rlax.git", rev = "master"}
tf-nightly = "^2.6.0.dev20210617"
dm-reverb-nightly = "^0.3.0.dev20210617"
tensorflow-datasets = "^4.3.0"
distrax = "^0.0.1"
jax = "^0.2.11"

gym = { version = "*", optional = true }
bsuite = { version = "*", optional = true }
dm_control = { version = "*", optional = true }
pybullet = { version = "*", optional = true }
dm-sonnet = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-xdist = "^2.3.0"
pylint = "^2.8.3"
flake8 = "^3.9.2"
isort = "^5.8.0"
pytype = "^2021.5.25"
yapf = "^0.31.0"
pre-commit = "^2.13.0"

[tool.poetry.extras]
envs = ["bsuite", "dm-control", "gym", "pybullet"]

[tool.isort]
profile = "google"
src_paths = "magi"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools >= 40.6.0", "wheel"]
build-backend = "poetry.core.masonry.api"
